# Medclarity-AI

./: .gitignore  README.md  pyproject.toml
backend/: ingest_sources.py  pyproject.toml  requirements.txt  scratch_test.py  tesseract_test.py  test_drug_validator.py  test_ocr_improvements.py
backend/app/: config.py  database.py  main.py  models.py
backend/app/agents/: coordinator.py  medical_agent.py  ocr_agent.py  rag_agent.py  safety_agent.py  schedule_generator.py  simple_agent.py  translation_agent.py
backend/app/llm/: openai_client.py
backend/app/utils/: build_drug_list.py  drug_validator.py  memory.py  tts.py
backend/data/sources/: extracted_drugs.txt
backend/tests/: test_medical_agent.py  test_workflow_fallbacks.py
frontend/: app.py  i18n.py  requirements.txt
