[project]
name = "medclarity-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "google-generativeai>=0.8.6",
    "langchain-huggingface>=1.2.2",
    "pandas>=2.0.0",
    "pillow>=12.2.0",
    "pytesseract>=0.3.13",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "sentence-transformers>=5.6.0",
    "speechrecognition>=3.10.0",
    "streamlit>=1.25.0",
]

[tool.uv.workspace]
members = [
    "backend",
]
