[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "faiss-cpu>=1.7.4",
    "fastapi>=0.100.0",
    "google-generativeai>=0.4.0",
    "gtts>=2.3.2",
    "httpx>=0.24.1",
    "langchain>=0.1.0",
    "langchain-community>=0.1.0",
    "langchain-core>=0.1.0",
    "langchain-google-genai>=1.0.0",
    "langchain-text-splitters>=1.1.2",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pypdf>=3.12.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.6",
    "sqlalchemy>=2.0.0",
    "uvicorn>=0.22.0",
    "langchain-huggingface>=1.2.2",
    "pytesseract>=0.3.13",
    "pillow>=12.2.0",
    "sentence-transformers>=5.6.0",
    "opencv-python>=4.8.0",
]
